--- a/app.json
+++ b/app.json
@@ -3,6 +3,10 @@
   "description": "",
   "scripts": {},
   "env": {
+    "NODE_OPTIONS": {
+      "required": true,
+      "value": "--max_old_space_size=512"
+    },
     "NODE_ENV": {
       "required": true,
       "value": "staging"
