--- a/package.json
+++ b/package.json
@@ -224,7 +224,8 @@
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.5",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-shell-plugin": "^0.5.0",
+    "node-gyp": "6.1.0"
   },
   "resolutions": {
     "@types/react": "*"
