--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
 bundler_args: "--jobs=4 --retry=3"
 
 before_install:
-  
+  - sudo apt-get install -y libsecret-1-dev curl
 addons:
   chrome: stable
 
