--- a/package.json
+++ b/package.json
@@ -225,7 +225,8 @@
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.5",
     "webpack-shell-plugin": "^0.5.0",
-    "node-gyp": "6.1.0"
+    "node-gyp": "6.1.0",
+    "keccak": "3.0.0"
   },
   "resolutions": {
     "@types/react": "*"
