--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "test": "wdio ./test/integration/wdio.conf.js",
     "test:integration": "wdio ./test/integration/wdio.conf.js --inspect",
     "test:integration:headless": "wdio ./test/integration/wdio-headless.conf.js",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "build:rinkeby": "cross-env SHOW_ALL_DAOS=true NETWORK=rinkeby webpack --config webpack.prod.config.js"
   },
   "dependencies": {
     "3box": "1.17.1",
