--- a/package.json
+++ b/package.json
@@ -82,12 +82,15 @@
     "@burner-wallet/burner-connect-provider": "^0.1.1",
     "@daostack/arc.js": "^0.2.70",
     "@dorgtech/daocreator-ui": "^1.0.10",
+    "@ethersproject/providers": "^5.0.6",
+    "@ethersproject/solidity": "5.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.10",
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@portis/web3": "^2.0.0-beta.43",
     "@sentry/browser": "^5.0.8",
     "@toruslabs/torus-embed": "^1.3.0",
+    "@uniswap/sdk": "^3.0.3-beta.1",
     "@walletconnect/web3-provider": "^1.0.0-beta.37",
     "axios": "^0.19.0",
     "bn.js": "^4.11.8",
