--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@uniswap/sdk": "^3.0.3-beta.1",
     "@walletconnect/web3-provider": "^1.0.0-beta.37",
     "axios": "^0.19.0",
+    "bignumber.js": "^9.0.0",
     "bn.js": "^4.11.8",
     "classnames": "^2.2.5",
     "clone-deep": "^4.0.1",
