--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "eslint": "^6.4.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.14.3",
+    "ethers": "^5.0.15",
     "html-webpack-plugin": "^3.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
