--- a/package.json
+++ b/package.json
@@ -74,16 +74,15 @@
     "test": "wdio ./test/integration/wdio.conf.js",
     "test:integration": "wdio ./test/integration/wdio.conf.js --inspect",
     "test:integration:headless": "wdio ./test/integration/wdio-headless.conf.js",
-    "test:unit": "jest",
-    "build:rinkeby": "NODE_ENV=production SHOW_ALL_DAOS=true NETWORK=rinkeby node --max_old_space_size=4096 node_modules/.bin/webpack --config webpack.prod.config.js"
+    "test:unit": "jest"
   },
   "dependencies": {
     "3box": "1.17.1",
     "@burner-wallet/burner-connect-provider": "^0.1.1",
     "@daostack/arc.js": "^0.2.70",
     "@dorgtech/daocreator-ui": "^1.0.10",
-    "@ethersproject/providers": "^5.0.6",
-    "@ethersproject/solidity": "5.0.0",
+    "@ethersproject/providers": "^5.0.12",
+    "@ethersproject/solidity": "^5.0.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.10",
     "@fortawesome/free-brands-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
@@ -102,6 +101,7 @@
     "eth-ens-namehash": "^2.0.8",
     "ethereum-blockies-png": "^0.1.3",
     "ethereumjs-abi": "^0.6.8",
+    "ethers": "^5.0.17",
     "express": "^4.16.4",
     "formik": "^1.5.2",
     "fortmatic": "^0.8.2",
@@ -203,7 +203,6 @@
     "eslint": "^6.4.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.14.3",
-    "ethers": "^5.0.15",
     "html-webpack-plugin": "^3.0.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
