Re-add build script

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "test": "wdio ./test/integration/wdio.conf.js",
     "test:integration": "wdio ./test/integration/wdio.conf.js --inspect",
     "test:integration:headless": "wdio ./test/integration/wdio-headless.conf.js",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "build:rinkeby": "NODE_ENV=production SHOW_ALL_DAOS=true NETWORK=rinkeby node --max_old_space_size=4096 node_modules/.bin/webpack --config webpack.prod.config.js"
   },
   "dependencies": {
     "3box": "1.17.1",
